moved icon styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Halleluia Zeyohannes, UMass Lowell Computer Science,
 halleluia_zeyohannes@student.uml.edu
 Copyright (c) 2022 by Halleluia Zeyohannes. All rights reserved. May be freely
 copied or excerpted for educational purposes with credit to the author.
-updated by HZ on September 12, 2022 at 4:59AM
+updated by HZ on September 12, 2022 at 1:08PM
 
 On this page, I introduce myself, summarize it's contents, and go into my 
 hobbies, books I've read, and the places I've traveled to.
@@ -281,14 +281,16 @@ hobbies, books I've read, and the places I've traveled to.
                 This just adds Copyright acknowledgment to the bottom of the webpage.
             -->
             <p>Copyright ©2022 Halleluia Zeyohannes</p>
-            
+
            <!--
                The following is the html for the CSS validation icon. style.css went through 
                the W3C CSS Validation and this html code was provided to add to the webpage.
+
+               style attribute removed and styling to this icon is done in the css stylesheet.
            -->
            <p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
+                <img class="validation-icon"
                     src="http://jigsaw.w3.org/css-validator/images/vcss"
                     alt="Valid CSS!">
             </a>
