copyright size adjustment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Halleluia Zeyohannes, UMass Lowell Computer Science,
 halleluia_zeyohannes@student.uml.edu
 Copyright (c) 2022 by Halleluia Zeyohannes. All rights reserved. May be freely
 copied or excerpted for educational purposes with credit to the author.
-updated by HZ on September 12, 2022 at 1:53PM
+updated by HZ on September 12, 2022 at 2:05PM
 
 On this page, I introduce myself, summarize it's contents, and go into my 
 hobbies, books I've read, and the places I've traveled to.
@@ -280,7 +280,7 @@ hobbies, books I've read, and the places I've traveled to.
             <!--
                 This just adds Copyright acknowledgment to the bottom of the webpage.
             -->
-            <p>Copyright ©2022 Halleluia Zeyohannes</p>
+            <p id="copyright">Copyright ©2022 Halleluia Zeyohannes</p>
 
            <!--
                The following is the html for the CSS validation icon. style.css went through 
