--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Halleluia Zeyohannes, UMass Lowell Computer Science,
 halleluia_zeyohannes@student.uml.edu
 Copyright (c) 2022 by Halleluia Zeyohannes. All rights reserved. May be freely
 copied or excerpted for educational purposes with credit to the author.
-updated by HZ on September 12, 2022 at 2:05PM
+updated by HZ on September 12, 2022 at 2:41PM
 
 On this page, I introduce myself, summarize it's contents, and go into my 
 hobbies, books I've read, and the places I've traveled to.
@@ -56,9 +56,9 @@ hobbies, books I've read, and the places I've traveled to.
            <li>I have been to 4 out of 7 continents.</li>
            <li>My favorite game is Pokémon Legends: Arceus* and I have played nearly 400 hours.
                These have been my favorite Pokémon to raise and battle with:
-               <img src="img/pokemon.png" alt="A box containing the headshots of caught Pokémon and the player's current team">
            </li>
        </ul>
+       <img id="list-img" src="img/pokemon.png" alt="A box containing the headshots of caught Pokémon and the player's current team">
        
        <p>*To learn more about the game and its plot check out Nintendo's page
            <a href="https://legends.pokemon.com/en-us/" target="_blank">here</a>.
