--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ hobbies, books I've read, and the places I've traveled to.
                 <figcaption>My friend and fellow exchange student Jackie Damato complied a bunch of photos and videos we took 
                     into this video!
                 </figcaption>
-        </figure>
+            </figure>
 
         <h3>Ethiopia</h3>
             <p>
@@ -277,6 +277,75 @@ hobbies, books I've read, and the places I've traveled to.
                <figcaption>I got this beautiful fan as a souvenir at the Summer Palace.</figcaption>
            </figure>
             
+        <h3>Reccomendations</h3>
+            <p>Here are some foods that I tried on my trips that I recommend to everyone.</p>
+            
+            <table class="center">
+                <tr>
+                    <th>Country</th>
+                    <th>Food</th>
+                    <th>Rating</th>
+                    <th>Review</th>
+                </tr>
+                <tr>
+                    <td>Spain</td>
+                    <td>Churros</td>
+                    <td>4/5</td>
+                    <td>This snack/dessert is any sweet lovers dream. It's delicious, 
+                        especially served hot and fresh with melted chocolate to dip 
+                        it in! It's crunchy on the outside and warms you up on a cold 
+                        day. I haven't had churros quite like the ones I had in Madrid. 
+                        I look forward to returning to Spain for many reasons, and this 
+                        is one of them.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Spain</td>
+                    <td>Tortilla Española</td>
+                    <td>5/5</td>
+                    <td>In English, this is called a Spanish omelette. Tortilla española is 
+                        a national dish and eaten often. I love food with egg and this dish 
+                        was something I always looked forward to eating as a part of the lunch
+                        my exchange "parents" gave me everyday. It's typically served at 
+                        room temperature but I love it when its served hot as well.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Ethiopia</td>
+                    <td>Firfir</td>
+                    <td>Infinity/5</td>
+                    <td>I grew up eating firfir, and my mom makes it so good, but the firfir 
+                        that I ate while staying at my aunt's hotel was some of the best I've 
+                        ever had. Firfir is ripped pieces of injera(a type of flat bread) cooked 
+                        in a spicy stew to soften it, typically doro wot or kai wot. It can have 
+                        cut up pieces of meat like goat, lamb, or beef. Soft foods are always a 
+                        win for me; this dish is top 2, and it's not number 2.
+                    </td>
+                </tr>
+                <tr>
+                    <td>China</td>
+                    <td>Baozi</td>
+                    <td>6/5</td>
+                    <td>Every morning I spent in Beijing, I would go to a street vendor near my 
+                        hotel and get myself 2 beef and green onion baozi for breakfast. Freshly 
+                        steamed, the breaded dumpling has a soft outside and savory filling that 
+                        I looked forward to everyday. The last day I was there, I got 4 just to 
+                        take with me to the airport.
+                    </td>
+                </tr>
+                <tr>
+                    <td>China</td>
+                    <td>Iced Black Tea with Vanilla Ice Cream</td>
+                    <td>5/5</td>
+                    <td>In a shopping center near my hotel, there was a boba shop called 
+                        A Little Tea that me and my friends frequented. This drink was the 
+                        reason why. Unfortunately for us, they only have store locations 
+                        in China so we got it as much as we could while we had the chance. 
+                        I've tried making it at home; while it tastes good, it isn't the same 
+                        and I can't wait to go back.
+                    </td>
+                </tr>
+            </table>
             <!--
                 This just adds Copyright acknowledgment to the bottom of the webpage.
             -->
