fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ hobbies, books I've read, and the places I've traveled to.
         <figcaption>I got this beautiful fan as a souvenir at the Summer Palace.</figcaption>
     </figure>
 
-    <h3>Recomendations</h3>
+    <h3>Recommendations</h3>
     <p>Here are some foods that I tried on my trips that I recommend to everyone.</p>
 
     <table class="center">
